--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     administrer les cas d'usage<br/>
                   </p>
                 </div>
-                <div class="col-lg-4 cta-btn-container text-center"> <a class="cta-btn align-middle" style="width:350px" href="https://catalog.datalab.mi">catalog.datalab.mi</a> </div>
+                <div class="col-lg-4 cta-btn-container text-center"> <a class="cta-btn align-middle" style="width:350px" href="http://catalog.datalab.mi">catalog.datalab.mi</a> </div>
               </div>
             </div>
             <div class="container">
@@ -153,7 +153,7 @@
                     pour le métier, contrôleur de gestion, statisticien, datascientist<br/>
                   </p>
                 </div>
-                <div class="col-lg-4 cta-btn-container text-center"> <a class="cta-btn align-middle" style="width:350px" href="https://viz.datalab.mi">viz.datalab.mi</a> </div>
+                <div class="col-lg-4 cta-btn-container text-center"> <a class="cta-btn align-middle" style="width:350px" href="http://viz.datalab.mi">viz.datalab.mi</a> </div>
               </div>
             </div>
             <div class="container">
@@ -168,7 +168,7 @@
                     SQL, python/scikit, R, scala, hadoop, tensorflow, ...<br/>
                   </p>
                 </div>
-                <div class="col-lg-4 cta-btn-container text-center"> <a class="cta-btn align-middle" style="width:350px" href="https://algo.datalab.mi">algo.datalab.mi</a> </div>
+                <div class="col-lg-4 cta-btn-container text-center"> <a class="cta-btn align-middle" style="width:350px" href="http://algo.datalab.mi">algo.datalab.mi</a> </div>
               </div>
             </div>
           </div>
