--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- debut header -->
   <header id="header">
     <div class="container">
-      <div id="logo" class="pull-left"> <a href="#haut"><img height="96px" src="img/logo_metiers/datalab-round.png" alt="" title="" /></a> </div>
+      <div id="logo" class="pull-left"> <a href="#haut"><img height="96px"  src="img/logo_metiers/datalab-round.png" alt="" title="" /></a> </div>
       <!-- debut nav-menu-container -->
       <nav id="nav-menu-container">
         <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
@@ -61,12 +61,13 @@
   <!-- fin header -->
   <!-- debut section haut -->
   <section id="haut">
-    <iframe src="https://player.vimeo.com/video/280442955?background=1"width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <div class="haut-container">
-      <h1>datalab.mi</h1>
-      <h2>Transformez votre métier par la donnée</h2>
-      <p><a href="#about" class="btn-get-started">découvrir</a> <a href="#services" class="btn-get-started">y accéder</a></p>
+      <div>
+        <h1>datalab.mi</h1>
+        <h2>Transformez votre métier par la donnée</h2>
+        <p><a href="#about" class="btn-get-started">découvrir</a> <a href="#services" class="btn-get-started">y accéder</a></p>
       </div>
+    </div>
   </section>
   <!-- fin section haut -->
   <!-- debut main -->
@@ -79,6 +80,7 @@
             <h3 class="title">Le datalab</h3>
             <p> Depuis juin 2016, le datalab soutien la mise en oeuvre de cas d'usages
               de valorisation de donnée, proposés et conduits avec les directions métiers. </p>
+
             <div class="icon-box wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
               <div class="icon"><i class="fa fa-database" aria-hidden="true"></i></div>
               <h4 class="title"> Le patrimoine de donnée </h4>
@@ -118,6 +120,7 @@
             <p><img width="100%" src="img/illustrations/pyramide_datascience.png" alt=""></p>
           </div>
         </div>
+
       </div>
     </section>
     <!-- fin section about -->
@@ -455,12 +458,18 @@
       </div>
     </section>
     <!-- fin section contact -->
+    <section>
+      <h1>&nbsp;</h1>
   </main>
   <!-- fin main -->
   <!-- debut footer -->
-  <footer id="footer">
+  <footer id="footer" >
     <div class="container">
-      <div class="copyright"> &copy; Copyright <strong>LAB-MI</strong></div>
+      <div class="row">
+        <div class="col-lg-4 center"> </strong></div>
+        <div class="col-lg-4 center" ><a style="color: white" href="valdon2018">retrouver ici la présentation du datalab du 12 septembre 2018</a></div>
+        <div class="col-lg-4 center"> &copy; Copyright <strong>datalab.mi</strong></div>
+      </div>
     </div>
   </footer>
   <!-- fin footer -->
