logo histovec et cartav en png pour éviter les pb de police

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
             <div class="box">
               <div class="icon"><a href="http://catalog.datalab.mi/fr/reuses/geodecisionnel-accidents-et-verbalisations-cartav/" aria-label="terminé"><i class="fa fa-check" aria-hidden="true"></i></a></div>
-              <h4 class="title"><a href="http://catalog.datalab.mi/fr/reuses/geodecisionnel-accidents-et-verbalisations-cartav/"><img  height="80px" width="200px" src="img/logo_metiers/cartav.svg" alt="cartAV"/></a></h4>
+              <h4 class="title"><a href="http://catalog.datalab.mi/fr/reuses/geodecisionnel-accidents-et-verbalisations-cartav/"><img  width="200px" src="img/logo_metiers/cartav.png" alt="cartAV"/></a></h4>
               <p class="description">Augmenter la sécurité sur les routes avec les forces de sécurité intérieure en exploitant les données de verbalisations et d’accidents.</p>
               <p><b> challenge 2017 - terminé ! </b></p>
             </div>
@@ -258,7 +258,7 @@
                 <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                   <div class="box">
                     <div class="icon"><a href="https://histovec.interieur.gouv.fr" aria-label="une voiture"><i class="fa fa-car" aria-hidden="true"></i></a></div>
-                    <h4 class="title"><a href="https://histovec.interieur.gouv.fr"><img  height="80px" width="200px" src="img/logo_metiers/histovec.svg" alt="histovec"/></a></h4>
+                    <h4 class="title"><a href="https://histovec.interieur.gouv.fr"><img  height="80px"  src="img/logo_metiers/histovec_square.png" alt="histovec"/></a></h4>
                     <p class="description">Acheter un véhicule d'occasion en confiance en connaissant son historique.</p>
                   </div>
                 </div>
