description des services

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                 <div class="col-lg-5">
                   <p class="cta-text">
                     <br/>
-                    cataloguer et décrire le patrimoine des données<br/>
-                    administrer les cas d'usage<br/>
+                    découvrir et reseigner le patrimoine des données<br/>
+                    partager les cas d'usage<br/>
                   </p>
                 </div>
                 <div class="col-lg-4 cta-btn-container text-center"> <a class="cta-btn align-middle" style="width:350px" href="http://catalog.datalab.mi">catalog.datalab.mi</a> </div>
