ajout victor et cristian pour ia flash

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </p>
             </div>
             <div class="icon-box wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-                <div class="icon"><i class="fa fa-mail-forward" aria-hidden="true"></i></div>
+                <div class="icon"><i class="fa " aria-hidden="true"></i></div>
                 <h4 class="title"> Déploiement et RGPD </h4>
                 <p class="description" style="margin-bottom:5px;"> 
                   Le déploiement de l'entrepôt repose sur la sécurité du cloud pour le cloisonnement
@@ -477,6 +477,22 @@
               <div class="social"> <a href="#" aria-label="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> <a href="#" aria-label="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a> <a href="#" aria-label="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>                <a href="#" aria-label="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a> </div>
             </div>
           </div> 
+          <div class="col-lg-3 col-md-6">
+              <div class="member">
+                <div class="pic"><img src="img/equipe.jpg" alt=""></div>
+                <h4>Victor Journé</h4>
+                <span>data scientist deep learning (IA Flash)</span>
+                <div class="social"> <a href="#" aria-label="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> <a href="#" aria-label="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a> <a href="#" aria-label="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>                <a href="#" aria-label="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a> </div>
+              </div>
+            </div>   
+            <div class="col-lg-3 col-md-6">
+                <div class="member">
+                  <div class="pic"><img src="img/equipe.jpg" alt=""></div>
+                  <h4>Cristian Perez</h4>
+                  <span>data scientist deep learning (IA Flash)</span>
+                  <div class="social"> <a href="#" aria-label="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> <a href="#" aria-label="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a> <a href="#" aria-label="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>                <a href="#" aria-label="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a> </div>
+                </div>
+              </div>                          
           <div class="col-lg-3 col-md-6">
               <div class="member">
                 <div class="pic"><img src="img/equipe.jpg" alt=""></div>
