--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@
             </div>   
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                  <div class="pic"><img src="img/equipe.jpg" alt=""></div>
+                  <div class="pic"><img height="150px" src="img/equipe/petit/cristian-perez.jpg" alt="Cristian Perez Brokate"></div>
                   <h4>Cristian Perez</h4>
                   <span>data scientist deep learning (IA Flash)</span>
-                  <div class="social"> <a href="#" aria-label="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> <a href="#" aria-label="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a> <a href="#" aria-label="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>                <a href="#" aria-label="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a> </div>
+                  <div class="social"> <a href="https://github.com/cristianpb" aria-label="github" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> <a href="https://twitter.com/cris_perez_b" aria-label="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a> <a href="https://www.linkedin.com/in/cristianperezbrokate" aria-label="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a> </div>
                 </div>
               </div>                          
           <div class="col-lg-3 col-md-6">
